# igor-ae

./: README.md
evaluation/partA_latency/: batch.py
evaluation/partA_latency/output/execution_time_f1/: custom_replica_table_bft_ef_10ms.c  custom_replica_table_bft_ef_15ms.c  custom_replica_table_bft_ef_20ms.c  custom_replica_table_bft_ef_5ms.c  custom_replica_table_bft_turpin_ef_10ms.c  custom_replica_table_bft_turpin_ef_15ms.c  custom_replica_table_bft_turpin_ef_20ms.c  custom_replica_table_bft_turpin_ef_5ms.c  custom_replica_table_no_rep_15ms.c  (+17 more)
evaluation/partB_schedulability/: batch.py  config.py  deadline_utils.py  log_utils.py  schedule_utils.py  task_utils.py
evaluation/partB_schedulability/compress_schedule_local/: common.py  compress_bft_ef.py  compress_bft_turpin_ef.py  compress_igor_ef.py  compress_igor_nofilter_ef.py  config.py
evaluation/partB_schedulability/output/: schedules_default_f1.txt  schedules_default_f2.txt  schedules_igor_f2.txt
evaluation/partC_capacity/: batch.py
evaluation/partD_communication/: batch.py
evaluation/partD_communication/data/: log_igor_f1.txt  log_igor_f2.txt  log_lamport_f1.txt  log_lamport_f2.txt  log_norep.txt  log_turpin_f1.txt  log_turpin_f2.txt
evaluation/partE_case-study/: README
scripts/: dependancies.txt
scripts/compress_schedule/: compress_no_rep.py  config.py
scripts/compress_schedule/output/: max_slots.txt
scripts/count_bytes/: Makefile  main.c
scripts/view_timing/: config.py  main.py
setup/: timer-circuit.pptx
software/igor/: Makefile  build-cfs-rpi.sh
software/igor/apps/exchange_lib/: CMakeLists.txt
software/igor/apps/exchange_lib/fsw/src/: exchange_lib.c  exchange_lib.h
software/igor/apps/log_lib/: CMakeLists.txt
software/igor/apps/log_lib/fsw/src/: log_lib.c  log_lib.h
software/igor/apps/sch_sync/: CMakeLists.txt
software/igor/apps/sch_sync/fsw/src/: sch_sync_app.c  sch_sync_tbldefs.h
software/igor/cfe/: CMakeLists.txt
software/igor/igor_defs/: cpu10_cfe_es_startup.scr  cpu10_platform_cfg.h  cpu11_cfe_es_startup.scr  cpu11_platform_cfg.h  cpu1_platform_cfg.h  cpu2_cfe_es_startup.scr  cpu2_platform_cfg.h  cpu3_platform_cfg.h  cpu4_platform_cfg.h  cpu5_platform_cfg.h  cpu6_platform_cfg.h  cpu7_platform_cfg.h  cpu8_platform_cfg.h  cpu9_msgids.h  cpu9_platform_cfg.h  default_osconfig.h  igor_perfids.h  msg_ids.h  perf_ids.h  sch_sync_platform_cfg.h  targets.cmake  targets_config.cmake  targets_enable.cmake  toolchain-cpu1.cmake
(+111 files in other folders)
